<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="viewModel"
            type="com.example.logintask1.ui.auth.signin.SigninViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signin.SigninFragment">




    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/emailContainer"
            app:layout_constraintTop_toBottomOf="@+id/emailContainer">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_signin"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dont_have_account"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/signinText"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="11dp"
                android:text="@string/create_an_account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/dont_have_account"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dont_have_account" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                errorMessage="@{viewModel.emailError}"
                validateText="@{viewModel.validateEmail()}"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="1dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@={viewModel.email}"
                    android:background="@drawable/edit_text_border"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                errorMessage="@{viewModel.passwordError}"
                validateText="@{viewModel.validatePassword()}"
                android:layout_width="0dp"
                android:layout_height="80dp"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:helperTextTextColor="@color/warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/password_hint"
                app:layout_constraintTop_toBottomOf="@+id/password_hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@={viewModel.password}"
                    android:background="@drawable/edit_text_border"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/passwordContainer"
                app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

            <Button
                android:id="@+id/signinButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="91dp"
                android:layout_marginBottom="96dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/signinButtonGoogle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reset_password"
                app:layout_constraintTop_toTopOf="@+id/reset_password" />

            <Button
                android:id="@+id/signinButtonGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/google_signin_button"
                android:text="@string/sign_in_google"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/signinButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>